networking/02-allow-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 02-allow-traefik-ingress
  namespace: sample-app
spec:
  podSelector:
    matchLabels:
      app: spring-boot-app-2 # which app apply the policy for
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
